--- a/.github/workflows/build_packages.yaml
+++ b/.github/workflows/build_packages.yaml
@@ -172,7 +172,7 @@ jobs:
 
         mkdir -p build
         cd build
-        export LDFLAGS='-static'
+        #export LDFLAGS='-static'
         cmake ${{ steps.prepare.outputs.make_flags }} ..
         make
         sudo make install
