try to build static executable

--- a/.github/workflows/build_packages.yaml
+++ b/.github/workflows/build_packages.yaml
@@ -11,6 +11,9 @@ on:
     types:
     - published
 
+env:
+  LDFLAGS: "-static -static-libgcc -static-libstdc++"
+
 jobs:
   build_packages:
     runs-on: ubuntu-20.04
